--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:frontend": "cd frontend && npm ci && npm run build && cd ../",
+    "build:cdk": "cd cdk && npm ci && npm run build && cd ../",
+    "build": "npm-run-all --parallel build:*",
+    "deploy": "npm run build && cd cdk && npm run deploy"
   },
   "keywords": [],
   "author": "Brendan Beltz",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
